PR-67 || display followings modal in FE + added get user following endpoint in BE
