# user-info-service/src/main/resources/openapi.yaml
@@ -209,6 +209,43 @@ paths:
               $ref: '#/definitions/User'
         '400':
           description: ''   
+
+  /users/{userUuid}/followings:              
+    get:
+      tags:
+        - User
+      summary: get user followings
+      description: ''
+      operationId: getUserFollowings
+      produces:
+        - "application/json"
+      parameters:
+        - in: path
+          name: userUuid
+          description: ''
+          required: true
+          type: string
+          format: uuid     
+        - in: query
+          name: page
+          description: ''
+          required: true
+          type: integer
+        - in: query
+          name: size
+          description: ''
+          required: true
+          type: integer
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/User'
+        '400':
+          description: ''   
+
           
   /users/followers/{followerUuid}:              
     delete:
